# sigint

./: .env.local.example  .gitignore  .gitmodules  AGENTS.md  SECURITY.md  TASKS.md  biome.json  lighthouserc.js  mal.py  next.config.js  package.json  pnpm-lock.yaml  rebuild.sh  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_auth_system.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  admin.py  ai.py  ai_inference.py  analytics.py  articles.py  auth.py  compliance.py  connectors.py  consent.py  editorial.py  engagement.py  enrichment.py  enterprise.py  export.py  leads.py  monitoring.py  newsletter.py  partners.py  search.py  social.py  (+2 more)
backend/app/core/: __init__.py  audit.py  config.py  database.py  rate_limit.py  rbac.py  security.py  zero_trust.py
backend/app/middleware/: access.py  auth.py  compliance.py
backend/app/models/: __init__.py  analytics.py  article.py  editorial.py  oauth_connection.py  password_reset_token.py  session.py  settings.py  user.py
backend/app/services/: __init__.py  auth.py  content_sync.py  email.py  embedding.py  oauth.py  session.py
backend/connectors/: __init__.py  multilateral.py  policy_feeds.py  regional_finance.py  trade_logistics.py
backend/scripts/: create_test_user.py
backend/tests/: conftest.py  test_admin.py  test_articles.py  test_auth.py  test_jwt_migration.py  test_search.py  test_search_similarity.py
(+314 files in other folders)
